[project]
name = "coral-creek"
version = "0.1.0"
description = "Quantitative trading project."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
package = true